webapp/static/css/main.css
/* Global Settings */
#blank{
    height:100px;
}

body {
    background-color:white; 
}

* {
    margin:0px;
    list-style: none;
    font-family: 'Raleway', sans-serif;
}
    
a {
    text-decoration: none;
}

h1 {
    font-size: 100px;
}

.green{
    color:green;
}

.button {    
    background-color: #FFFFFF;
    border: 1px solid rgb(209,213,219);
    border-radius: .5rem;
    box-sizing: border-box;
    color: black;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
  }

.button:hover{
    color:grey;
} 

table, th, td{
    border: 0.5px solid;
    border-collapse: collapse;
}

td{
    padding-left: 2px;
    padding-right: 10px;
    padding-top: 2px;
    padding-bottom: 2px;
}


/** navigation starts here **/

.nav {
    background-color:rgba(0,0,0,0.6);
    margin-top:0px;
    height:100px;
    width:100%;
    position: fixed;
    z-index: 3;
    -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
       -moz-animation: fadein 1s; /* Firefox < 16 */
        -ms-animation: fadein 1s; /* Internet Explorer */
         -o-animation: fadein 1s; /* Opera < 12.1 */
            animation: fadein 1s;
}
    
#navleft {
    float:left;
    line-height: 95px;
    padding-left: 30px;
    padding-top:0px;
    padding-bottom: 0px;
    margin: 0px;
}

#navleft #logo{
    color:white;
    font-size: 30px;
    font-weight: bold;
}

#navright {
    float:right;
    line-height: 100px;
}

#navright li{
    display:inline;
}

#navright a {
    color:white;
    font-size:1.5em;
    margin-right:30px;
    text-transform: uppercase;
    text-decoration: none;
    transition: color 0.1s;
}

#navright a:hover{
    color: grey;
}

#navright #active{
    color:grey;
}

#menu {
    display:none;
}

/* phone websites */
@media screen and (max-width: 900px){

    
    #navright{
        position:relative;
        margin-top:0px;
        width:100%;
        line-height: 0px;
        background-color:rgba(0,0,0,0.6);
        margin-right:0px;
        opacity: 0;
        z-index: 2;
        transition: line-height 0.3s, opacity 0.3s;
    }
    
    #navright li{
        display:list-item;
        list-style: none;
        text-align: center;
        transition: display 1s;
    }
    
    #navright ul{
        list-style: none;
        opacity: 0;
        transition: opacity 0.3s;
    }

    #menu{
        background-color: rgba(0,0,0,0);
        float:right;
        margin-right:20px;
        cursor:pointer;
        border:none;
        outline:none;
        font-size: 10px;
        margin-top: 24px;
        margin-bottom: 24px;
        padding:0px;
        display: block;
    }
}
/* Nav end */
.landing_title{
    font-size: 75px;
    align-items: center;
}

